jenkins-k8s/jenkins-master-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
